--- a/css.css
+++ b/css.css
@@ -3,6 +3,7 @@
  
   object-fit: contain;
   border-width: 2px;
+  margin-bottom: 5px;
   
 
 }
@@ -34,10 +35,20 @@
 
 .channel-image{
   display: inline-block;
+  vertical-align: top;
   width: 83px;
 
 }
 .texts{
   display: inline-block;
   width: 163px;
+}
+.channel-img{
+  
+  width: 100%;
+  height:80px;
+  border-radius: 80px;
+}
+.parag{
+  margin-top: 0px;
 }
