--- a/css.css
+++ b/css.css
@@ -33,6 +33,7 @@
 
 
 
+
 .channel-image{
   display: inline-block;
   vertical-align: top;
@@ -45,10 +46,12 @@
 }
 .channel-img{
   
-  width: 80px;
-  height:80px;
-  border-radius: 80px;
+  width: 40px;
+  border-radius: 90px;
 }
 .parag{
+  font-family: Roboto,Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  line-height: 20px;
   margin-top: 0px;
 }
