--- a/css.css
+++ b/css.css
@@ -26,11 +26,17 @@
   display: inline-block;
   width: 250px;
   vertical-align: top;
-  margin-right: 15px;
+  
   
   
 }
+.full-container-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 15px;
+  column-gap: 15px;
 
+}
 
 .video-info-grid{
   display: grid;
@@ -61,4 +67,7 @@
   font-weight: 500;
   line-height: 20px;
   margin-top: 0px;
+}
+p{
+  font-family:Single Day ;
 }
