--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 .imag{
-  width: 250px;
+  width: 100%;
  
   object-fit: contain;
   border-width: 2px;
@@ -22,19 +22,12 @@
   border-color: black;
   
 }
-.container{
-  display: inline-block;
-  width: 250px;
-  vertical-align: top;
-  
-  
-  
-}
+
 .full-container-grid{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 15px;
-  column-gap: 15px;
+  column-gap: 30px;
 
 }
 
