--- a/header.css
+++ b/header.css
@@ -1,3 +1,26 @@
 .header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between ;
   
+  
+
+}
+.left-section{
+  background-color: aqua;
+  
+  width: 150px;
+}
+.middle-section{
+  background-color: aquamarine;
+  flex: 1;
+  margin-left: 70px;
+  margin-right: 35px;
+  max-width: 500px;
+  
+  
+}
+.right-section{
+  background-color: brown;
+  width:200px;
 }
