--- a/header.css
+++ b/header.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between ;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 8px;
+  padding-bottom: 10px;
   
   
 
@@ -20,11 +20,12 @@
 .middle-section{
   display: flex;
   align-items: center;
-  background-color: aquamarine;
+
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
   max-width: 500px;
+
   
   
 }
@@ -44,19 +45,49 @@
 }
 
 .search-button{
-  height: 32px;
+  margin-left: -1px;
+
+  border-radius: 0%;
+  margin-top: 3px;
+  height: 40px;
   width: 60px;
+  background-color: rgb(248, 248, 248);
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: inset 1px 2px 3px rgba(0,0, 0,0.05);
+  margin-right: 15px;
 }
 .voice-button{
-  height:32px;
+  margin-top: 3px;
+
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  height:40px;
   width: 40px;
+  border: none;
 }
 .input-box{
-  height: 32px;
+  height: 35px;
   flex:1;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(248, 248, 248);
+  border-radius: 0%;
+  box-shadow: inset 1px 2px 3px rgba(0,0, 0,0.05);
+  margin-top: 3px;
+  margin-right: 0px;
+
 }
 .input-box::placeholder{
   font-family: Roboto,Arial;
   font-size: 16px;
   
+}
+.search-icon{
+  width:25px;
+  margin-top: 2px;
+}
+.voice-icon{
+  margin-top: 2px;
+  width: 25px;
 }
