added some more video

--- a/general.css
+++ b/general.css
@@ -5,3 +5,10 @@ body{
   margin: 0;
   padding-bottom: 1000px;
 }
+.full-container-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 15px;
+  column-gap: 30px;
+
+}
