--- a/header.css
+++ b/header.css
@@ -51,7 +51,8 @@
 .search-button{
   margin-left: -1px;
 
-  border-radius: 0%;
+  border-top-right-radius:20px ;
+  border-bottom-right-radius: 20px;
   margin-top: 3px;
   height: 40px;
   width: 60px;
@@ -76,7 +77,8 @@
   border-style: solid;
   border-width: 2px;
   border-color: rgb(248, 248, 248);
-  border-radius: 0%;
+  border-top-left-radius: 17.5px;
+  border-bottom-left-radius: 17.5px;
   box-shadow: inset 1px 2px 3px rgba(0,0, 0,0.05);
   margin-top: 3px;
   margin-right: 0px;
@@ -88,6 +90,7 @@
   
 }
 .search-icon{
+  
   width:25px;
   margin-top: 2px;
 }
