--- a/header.css
+++ b/header.css
@@ -1,7 +1,12 @@
 .header{
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: row;
   justify-content: space-between ;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   padding-top: 8px;
   padding-bottom: 10px;
   
@@ -24,7 +29,9 @@
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
-  max-width: 500px;
+  
+  max-width: 500px ;
+  
 
   
   
