--- a/header.css
+++ b/header.css
@@ -9,6 +9,9 @@
   right: 0px;
   padding-top: 8px;
   padding-bottom: 10px;
+  border-bottom-width: 3px;
+  border-style: solid;
+  border-color: rgba(232, 240, 248, 0.568);
   
   
 
