--- a/header.css
+++ b/header.css
@@ -127,3 +127,25 @@
 
   height: 25px;
 }
+.notifications-relative{
+  position: relative;
+
+  
+}
+.notifications-original-number{
+  font-family: Roboto,Arial,sans-serif;
+  font-weight: 300;
+  font-size: 10px;
+  position: absolute;
+  top: 8px;
+  right: -4px;
+  
+  background-color: rgb(197, 48, 48);
+  color: white;
+  padding: 1.3px 4.5px 1.5px 4.5px;
+  border-radius: 10px;
+  
+  
+
+  
+}
