--- a/video.css
+++ b/video.css
@@ -31,6 +31,8 @@
   
   vertical-align: top;
   
+  
+  
 
 }
 
@@ -40,9 +42,11 @@
   width: 1fr;
 }
 .channel-img{
+  padding-top: 2px;
+  width: 38px;
+  height: 38px;
   
-  width: 50px;
-  border-radius: 90px;
+  border-radius: 19px;
 }
 .parag{
   
