--- a/general.css
+++ b/general.css
@@ -19,3 +19,18 @@ body{
   column-gap: 15px;
 
 }
+@media(max-width:450px){
+  .full-container-grid{
+    grid-template-columns: 1fr;
+  }
+}
+@media(min-width:451px) and (max-width:850px){
+  .full-container-grid{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media(min-width:851px) and (max-width:1150px){
+  .full-container-grid{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
